<?xml version="1.0"?>
<package>
  <name>but_costmap_plugins</name>
  <version>0.0.5</version>
  <description>TBD</description>

  <maintainer email="imaterna@fit.vutbr.cz">Zdenek Materna</maintainer>

  <license>LGPL</license>
  
  <!--url type="website">http://ros.org/wiki/srs_interaction_primitives</url>
  <url type="repository">https://github.com/robofit/but_hmi</url>
  <url type="bugtracker">https://github.com/robofit/but_hmi/issues</url-->
  

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>rostest</run_depend>
  
  <test_depend>gtest</test_depend>
  
  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
  
</package>
