<?xml version="1.0"?>
<package>
  <name>but_env_model</name>
  <version>0.0.5</version>
  <description>Primitives for HRI.</description>

  <maintainer email="spanel@fit.vutbr.cz">Michal Spanel</maintainer>

  <license>LGPL</license>
  
  <url type="website">http://ros.org/wiki/srs_env_model</url>
  <url type="repository">https://github.com/robofit/but_env_percp</url>
  <url type="bugtracker">https://github.com/robofit/but_env_percp/issues</url>
  
  <author>Vit Stancl, Michal Spanel, Tomas Lokaj, Jan Gorig</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>ogre</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>but_env_model_msgs</build_depend>
  <build_depend>but_interaction_primitives</build_depend>
  <build_depend>message_filters</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>ogre</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>but_env_model_msgs</run_depend>
  <run_depend>but_interaction_primitives</run_depend>
  <run_depend>message_filters</run_depend>
  
  <export>
		<nodelet plugin="${prefix}/nodelets.xml" />
	</export>
  
</package>
